@@ -1,2 +1,3 @@
 /default.js			   : default101.js
 mergepackage.js        : mergepackage2.js
+/test.js			 --> test1.js
