@@ -40,6 +40,7 @@ BETA ======= 1.8.1
 - added: String.base64ToBuffer();
 - added: terminal -> `tpm unpack [package_name] [optional: target_directory]`
 - added: versions is applied to raw HTML
+- added: versions supports auto-mapping
 - added: sync2(), e.g. sync2(fn), diff with v1: sync(fn)() and v2: sync2(fn)
 - added: "dependencies" file for installing dependencies (modules, packages, etc.)
 
